slug change to avoid rewrite issue

--- a/src/pages/community/contribute-a-component.mdx
+++ b/src/pages/community/contribute-a-component.mdx
@@ -4,7 +4,7 @@ description:
   Anyone can add assets to the community component index. Maintainers can submit
   a short pull request in GitHub to add components to the index.
 
-tabs: ['Component index', 'How to contribute']
+tabs: ['Component index', 'Contribute a component']
 ---
 
 <PageDescription>
