docs: team description tweaks

--- a/src/pages/all-about-carbon/the-team.mdx
+++ b/src/pages/all-about-carbon/the-team.mdx
@@ -17,9 +17,11 @@ available for anyone to use and everyone is encouraged to contribute.
 ## The core team
 
 Carbon is maintained by a dedicated team of designers, developers, and writers
-primarily based in the Austin, Texas IBM Design Studio.
+primarily based in the Austin, Texas IBM Design Studio. Right now though, we’re
+all staying safe and working from home.
 
-Right now though, we’re all staying safe and working from home.
+The team is committed to working with fellow designers and developers to make
+the design system as robust and useful as possible.
 
 <Row>
 
