Docs: capitalization fix

--- a/src/pages/designing/tutorials.mdx
+++ b/src/pages/designing/tutorials.mdx
@@ -45,7 +45,7 @@ steps of getting set up with the Carbon Sketch kits and grid template.
 <Video vimeoId="457803206" />
 
 To learn more about our Sketch kits, head over to
-[Design Kits](/designing/kits/sketch).
+[Design kits](/designing/kits/sketch).
 
 ## Using the 2x Grid
 
