--- a/src/pages/community/component-index.mdx
+++ b/src/pages/community/component-index.mdx
@@ -6,7 +6,7 @@ description:
   time, and they may be incomplete or experimental. For support, please contact
   the contributors listed on each page.
 
-tabs: ['Component index', 'How to contribute']
+tabs: ['Component index', 'Contribute a component']
 ---
 
 import ComponentIndexPage from '../../components/ComponentIndexPage';
