docs: matching title to tab

--- a/src/pages/community/contribute-a-component.mdx
+++ b/src/pages/community/contribute-a-component.mdx
@@ -1,5 +1,5 @@
 ---
-title: Contributing a component
+title: Contribute a component
 description:
   Anyone can add assets to the community component index. Maintainers can submit
   a short pull request in GitHub to add components to the index.
