docs: tweaked core team goal

--- a/src/pages/all-about-carbon/the-team.mdx
+++ b/src/pages/all-about-carbon/the-team.mdx
@@ -20,8 +20,8 @@ Carbon is maintained by a dedicated team of designers, developers, and writers
 primarily based in the Austin, Texas IBM Design Studio. Right now though, we’re
 all staying safe and working from home.
 
-The team is committed to working with fellow designers and developers to make
-the design system as robust and useful as possible.
+The team is committed to making our fellow designers and developers productive
+and successful in designing digital experiences and products.
 
 <Row>
 
