--- a/src/pages/all-about-carbon/the-team.mdx
+++ b/src/pages/all-about-carbon/the-team.mdx
@@ -30,7 +30,7 @@ and successful in designing digital experiences and products.
 ![Mike Abbink headshot](/images/team/abbink_mike.png)
 
 </Profile>
-<Profile name="John Bister" title="Software designer">
+<Profile name="John Bister" title="Motion designer">
 
 ![John Bister headshot](/images/team/bister_john.png)
 
