--- a/src/pages/community/contribute-a-component.mdx
+++ b/src/pages/community/contribute-a-component.mdx
@@ -1,5 +1,5 @@
 ---
-title: Contributing a component
+title: Contribute a component
 description:
   Anyone can add assets to the community component index. Maintainers can submit
   a short pull request in GitHub to add components to the index.
@@ -19,8 +19,8 @@ short pull request in GitHub to add components to the index.
 1. In the
    [index folder](https://github.com/carbon-design-system/carbon-website/tree/master/src/data/index)
    of the carbon-website GitHub repo, open your team folder. Create a folder if
-   your team doesn’t have one yet).
-2. On the next page, click `Add file` (top right) then `Create new file`.
+   your team doesn’t have one yet.
+2. Click `Add file` (top right), then `Create new file`.
 3. Name your file `component-name.yml`, where _component-name_ is the name of
    your component.
 4. Copy and paste the following template into the `Edit new file` section of the
@@ -45,12 +45,12 @@ short pull request in GitHub to add components to the index.
 
 5. Once done, click the green `Commit new file` button at the bottom.
 
-After submitting the PR for the data, you should upload a thumbnail image. Go
-back to your team folder in the
-[index](https://github.com/carbon-design-system/carbon-website/tree/master/src/data/index).
+After submitting the PR for the data, you should upload a thumbnail image.
 
-1. Inside your team folder click the `images` folder.
-2. In the top right, click `Add file` then `Upload files` to upload your image
+1. Go back to your team folder in the
+   [index](https://github.com/carbon-design-system/carbon-website/tree/master/src/data/index).
+2. Inside your team folder, open the `images` folder.
+3. In the top right, click `Add file` then `Upload files` to upload your image
    to that page then submit the PR. Note: name your image file with the same
    name as the component (e.g. `component-name.png` to match
    `component-name.yml`).
