--- a/src/pages/whats-happening/work-in-progress/index.mdx
+++ b/src/pages/whats-happening/work-in-progress/index.mdx
@@ -33,6 +33,8 @@ provide feedback and have a say in Carbon's direction.
 
 ### Tools and resources
 
+**React Native Sketch kits for mobile**
+
 <CardGroup>
   <MiniCard
     onClick={() => fathom('trackGoal', 'GC8C8OMU', 0)}
