--- a/src/pages/whats-happening/work-in-progress/index.mdx
+++ b/src/pages/whats-happening/work-in-progress/index.mdx
@@ -38,7 +38,7 @@ provide feedback and have a say in Carbon's direction.
 <CardGroup>
   <MiniCard
     onClick={() => fathom('trackGoal', 'GC8C8OMU', 0)}
-    title="Carbon Native Mobile (Light theme)"
+    title="Light theme"
     href="sketch://add-library/cloud/a3343128-adb6-489c-9e62-709d89ba76e9"
     actionIcon="launch"
   />
