--- a/src/pages/whats-happening/work-in-progress/index.mdx
+++ b/src/pages/whats-happening/work-in-progress/index.mdx
@@ -48,7 +48,7 @@ provide feedback and have a say in Carbon's direction.
     actionIcon="launch"
   />
   <MiniCard
-    title="IBM Grid template (Native Mobile)"
+    title="IBM Grid template"
     href="https://www.sketch.com/s/42e694ee-4b37-41c9-8c8f-480e2415d9de"
     actionIcon="launch"
   />
