--- a/src/pages/whats-happening/work-in-progress/index.mdx
+++ b/src/pages/whats-happening/work-in-progress/index.mdx
@@ -43,7 +43,7 @@ provide feedback and have a say in Carbon's direction.
     actionIcon="launch"
   />
   <MiniCard
-    title="Carbon Native Mobile (Dark theme)"
+    title="Dark theme"
     href="sketch://add-library/cloud/1f59f590-6915-47b0-bf06-6fd66209b3b3"
     actionIcon="launch"
   />
