docs: leadership definition updates

--- a/src/pages/all-about-carbon/leadership.mdx
+++ b/src/pages/all-about-carbon/leadership.mdx
@@ -23,13 +23,14 @@ direction, governance, and support.
 </AnchorLinks>
 
 To sustain productive contribution and maintain a clear direction for Carbon as
-a whole, there are various groups within IBM that provide governance and
-support.
+a whole, there are various groups within IBM that work together to provide
+governance and support.
 
 ## Steering committee
 
 The Carbon Design System steering committee provides oversight and direction for
-Carbon and its design and development community, and related projects.
+Carbon and its design and development community. It is made up of Carbon
+practitioners to ensure Carbon stays true to the community we're serving.
 
 ### Responsibilities
 
@@ -84,10 +85,11 @@ The key responsibilities of this project are to:
 
 Members to be confirmed.
 
-## Advisory board
+## Board of directors
 
-The Carbon Design System advisory board is comprised of executive stakeholders.
-They oversee the direction of Carbon.
+The Carbon board of directors is comprised of executives across the company who
+advise on the direction of Carbon and ensure top level buy-in and resource
+allocation to support Carbon's work.
 
 ### Responsibilities
 
