docs: anchor link fix

--- a/src/pages/all-about-carbon/leadership.mdx
+++ b/src/pages/all-about-carbon/leadership.mdx
@@ -18,7 +18,7 @@ direction, governance, and support.
   <AnchorLink>Overview</AnchorLink>
   <AnchorLink>Steering committee</AnchorLink>
   <AnchorLink>Projects</AnchorLink>
-  <AnchorLink>Advisory board</AnchorLink>
+  <AnchorLink>Board of directors</AnchorLink>
 
 </AnchorLinks>
 
