docs: team title updates to be more specific

--- a/src/pages/all-about-carbon/the-team.mdx
+++ b/src/pages/all-about-carbon/the-team.mdx
@@ -40,67 +40,67 @@ and successful in designing digital experiences and products.
 ![Josh Black headshot](/images/team/black_josh.png)
 
 </Profile>
-<Profile name="Matt Brothers" title="Software developer">
+<Profile name="Matt Brothers" title="Front-end developer">
 
 ![Matt Brothers headshot](/images/team/brothers_matt.png)
 
 </Profile>
-<Profile name="Robin Cannon" title="Program Manager">
+<Profile name="Robin Cannon" title="Program director">
 
 ![Robin Cannon headshot](/images/team/cannon_robin.png)
 
 </Profile>
-<Profile name="Andrea Cardona" title="Software developer">
+<Profile name="Andrea Cardona" title="Front-end developer">
 
 ![Andrea Cardona headshot](/images/team/cardona_andrea.png)
 
 </Profile>
-<Profile name="Jan Child" title="Content designer">
+<Profile name="Jan Child" title="Content design lead">
 
 ![Jan Child headshot](/images/team/child_jan.png)
 
 </Profile>
-<Profile name="Alessandra Davila" title="Software developer">
+<Profile name="Alessandra Davila" title="Front-end developer">
 
 ![Alessandra Davila headshot](/images/team/davila_ale.png)
 
 </Profile>
-<Profile name="TJ Egan" title="Software developer">
+<Profile name="TJ Egan" title="Front-end developer">
 
 ![TJ Egan headshot](/images/team/egan_tj.png)
 
 </Profile>
-<Profile name="Anna Gonzales" title="Software designer">
+<Profile name="Anna Gonzales" title="Senior visual designer">
 
 ![Anna Gonzales headshot](/images/team/gonzales_anna.png)
 
 </Profile>
-<Profile name="Ricardo Henriquez" title="Software developer">
+<Profile name="Ricardo Henriquez" title="Front-end developer">
 
 ![Ricardo Henriquez headshot](/images/team/henriquez_ricardo.png)
 
 </Profile>
-<Profile name="Jillian Howarth" title="Software designer">
+<Profile name="Jillian Howarth" title="UX designer">
 
 ![Jillian Howarth headshot](/images/team/howarth_jillian.png)
 
 </Profile>
-<Profile name="Alison Joseph" title="Software development manager">
+<Profile name="Alison Joseph" title="Development manager">
 
 ![Alison Joseph headshot](/images/team/joseph_alison.png)
 
 </Profile>
-<Profile name="DA Kahn" title="Software developer">
+<Profile name="D.A. Kahn" title="Front-end developer, Accessibility advocate">
 
 ![DA Kahn headshot](/images/team/kahn_da.png)
 
 </Profile>
-<Profile name="Josefina Mancilla"  title="Software developer">
+<Profile name="Josefina Mancilla"  title="Front-end developer">
 
 ![Josefina Mancilla headshot](/images/team/mancilla_josefina.png)
 
 </Profile>
-<Profile name="Rafa Nogueras" title="Software developer">
+<Profile name="Rafa Nogueras" title="Back-end developer">
 
 ![Rafa Nogueras headshot](/images/team/nogueras_rafa.png)
 
@@ -110,7 +110,7 @@ and successful in designing digital experiences and products.
 ![Vince Picone headshot](/images/team/picone_vince.png)
 
 </Profile>
-<Profile name="Lauren Rice" title="Software designer">
+<Profile name="Lauren Rice" title="Visual designer">
 
 ![Lauren Rice headshot](/images/team/rice_lauren.png)
 
@@ -120,12 +120,12 @@ and successful in designing digital experiences and products.
 ![Matt Rosno headshot](/images/team/rosno_matt.png)
 
 </Profile>
-<Profile name="Jeannie Servaas" title="IBM Design Principle">
+<Profile name="Jeannie Servaas" title="IBM Design Principal">
 
 ![eannie Servaas headshot](/images/team/servaas_jean.png)
 
 </Profile>
-<Profile name="Scott Strubberg" title="Software developer">
+<Profile name="Scott Strubberg" title="Front-end developer">
 
 ![Scott Strubberg headshot](/images/team/strubberg_scott.png)
 
