--- a/src/pages/all-about-carbon/the-team.mdx
+++ b/src/pages/all-about-carbon/the-team.mdx
@@ -100,7 +100,7 @@ and successful in designing digital experiences and products.
 ![Josefina Mancilla headshot](/images/team/mancilla_josefina.png)
 
 </Profile>
-<Profile name="Rafa Nogueras" title="Back-end developer">
+<Profile name="Rafa Nogueras" title="Full-stack developer">
 
 ![Rafa Nogueras headshot](/images/team/nogueras_rafa.png)
 
