docs: tweak to team intro para

--- a/src/pages/all-about-carbon/the-team.mdx
+++ b/src/pages/all-about-carbon/the-team.mdx
@@ -21,7 +21,8 @@ primarily based in the Austin, Texas IBM Design Studio. Right now though, we’r
 all staying safe and working from home.
 
 The team is committed to making our fellow designers and developers productive
-and successful in designing digital experiences and products.
+and successful in designing digital experiences and products. If you need help
+or have questions, feel free to reach out to anyone on the team.
 
 <Row>
 
