docs: remove lead-in sentence for responsibilities

--- a/src/pages/all-about-carbon/leadership.mdx
+++ b/src/pages/all-about-carbon/leadership.mdx
@@ -34,8 +34,6 @@ practitioners to ensure Carbon stays true to the community we're serving.
 
 ### Responsibilities
 
-The key responsibilities of the committee are as follows:
-
 - Improve design strategy, quality, and consistency within the design system.
 - Promote and support usage of and contribution to the Carbon Design System
   within their organizations.
@@ -66,7 +64,7 @@ for approval.
 
 ### Developer facilitation
 
-The key responsibilities of this project are to:
+#### Responsibilities
 
 - Highlight technical challenges and obstacles to adoption, and recommended
   tooling and solutions.
@@ -78,7 +76,7 @@ Members to be confirmed.
 
 ### Data visualization
 
-The key responsibilities of this project are to:
+#### Responsibilities
 
 - Prioritize chart and data visualization types for design attention.
 - Support teams in using the best chart implementations for their product needs.
@@ -92,8 +90,6 @@ advise on the direction of Carbon and ensure top level buy-in and resource
 allocation to support Carbon's work.
 
 ### Responsibilities
-
-The key responsibilities of the board are as follows:
 
 - Hold the steering committee, and Carbon as a whole, accountable for delivery
   of design excellence, standards, guidance and business impact.
