docs: add members, projects page

--- a/src/pages/all-about-carbon/leadership.mdx
+++ b/src/pages/all-about-carbon/leadership.mdx
@@ -14,18 +14,6 @@ direction, governance, and support.
 
 </PageDescription>
 
-<AnchorLinks>
-  <AnchorLink>Overview</AnchorLink>
-  <AnchorLink>Steering committee</AnchorLink>
-  <AnchorLink>Projects</AnchorLink>
-  <AnchorLink>Board of directors</AnchorLink>
-
-</AnchorLinks>
-
-To sustain productive contribution and maintain a clear direction for Carbon as
-a whole, there are various groups within IBM that work together to provide
-governance and support.
-
 ## Steering committee
 
 The Carbon Design System steering committee provides oversight and direction for
@@ -50,38 +38,44 @@ practitioners to ensure Carbon stays true to the community we're serving.
 
 ### Members
 
-To be confirmed.
+<Row>
 
-## Projects
+<Profile name="Mike Abbink" title="IBM Distingished Designer">
 
-Projects are comprised of subject matter experts with a particular focus area.
-They can be formed from scratch, or might comprise an existing guild or group.
-They may be permanent initiatives, or formed for specific projects with a
-committed scope of work.
+![Mike Abbink headshot](/images/team/abbink_mike.png)
 
-Proposals for the formation of projects are submitted to the steering committee
-for approval.
+</Profile>
+<Profile name="Dawn Ahukanna" title="Design Principal and Front-end Architect, Watson IoT">
 
-### Developer facilitation
+![Dawn Ahukanna headshot](/images/team/placeholder.png)
 
-#### Responsibilities
+</Profile>
+<Profile name="Robin Cannon" title="Program Director">
 
-- Highlight technical challenges and obstacles to adoption, and recommended
-  tooling and solutions.
-- Help ensure technical alignment of components and patterns with the system as
-  a whole.
-- Identify and encourage high quality project maintainers and committers.
+![Robin Cannon headshot](/images/team/cannon_robin.png)
 
-Members to be confirmed.
+</Profile>
+<Profile name="David Levinson" title="IBM Design Principal, IBM Cloud and Cognitive Software">
 
-### Data visualization
+![David Levinson headshot](/images/team/placeholder.png)
 
-#### Responsibilities
+</Profile>
+<Profile name="Alison Joseph" title="Development Manager, Carbon">
 
-- Prioritize chart and data visualization types for design attention.
-- Support teams in using the best chart implementations for their product needs.
+![Alison Joseph headshot](/images/team/joseph_alison.png)
 
-Members to be confirmed.
+</Profile>
+<Profile name="Jeannie Servaas" title="IBM Design Principal, Carbon">
+
+![Jeannie Servaas headshot](/images/team/servaas_jean.png)
+
+</Profile>
+<Profile name="Tessa Rodes" title="Senior Design Manager, IBM Cloud Platform">
+
+![Tessa Rodes headshot](/images/team/placeholder.png)
+
+</Profile>
+</Row>
 
 ## Board of directors
 
@@ -109,4 +103,27 @@ units from the Carbon Design System.
 
 ### Members
 
-To be confirmed.
+<Row>
+
+<Profile name="Mike Abbink" title="IBM Distingished Designer">
+
+![Mike Abbink headshot](/images/team/abbink_mike.png)
+
+</Profile>
+<Profile name="Arin Bhowmick" title="Vice President and Chief Design Officer, Cloud Data & AI">
+
+![Arin Bhowmick headshot](/images/team/placeholder.png)
+
+</Profile>
+<Profile name="Haidy Francis" title="Design Executive, IBM Security">
+
+![Haidy Francis headshot](/images/team/placeholder.png)
+
+</Profile>
+<Profile name="Craig Moser" title="Vice President of Design and Usability, AI Applications">
+
+![Craig Moser headshot](/images/team/placeholder.png)
+
+</Profile>
+
+</Row>
