--- a/src/pages/all-about-carbon/the-team.mdx
+++ b/src/pages/all-about-carbon/the-team.mdx
@@ -31,107 +31,107 @@ or have questions, feel free to reach out to anyone on the team.
 ![Mike Abbink headshot](/images/team/abbink_mike.png)
 
 </Profile>
-<Profile name="John Bister" title="Motion designer">
+<Profile name="John Bister" title="Motion Designer">
 
 ![John Bister headshot](/images/team/bister_john.png)
 
 </Profile>
-<Profile name="Josh Black" title="Software developer">
+<Profile name="Josh Black" title="Software Developer, Technical Lead">
 
 ![Josh Black headshot](/images/team/black_josh.png)
 
 </Profile>
-<Profile name="Matt Brothers" title="Front-end developer">
+<Profile name="Matt Brothers" title="Front-end Developer">
 
 ![Matt Brothers headshot](/images/team/brothers_matt.png)
 
 </Profile>
-<Profile name="Robin Cannon" title="Program director">
+<Profile name="Robin Cannon" title="Program Director">
 
 ![Robin Cannon headshot](/images/team/cannon_robin.png)
 
 </Profile>
-<Profile name="Andrea Cardona" title="Front-end developer">
+<Profile name="Andrea Cardona" title="Front-end Developer">
 
 ![Andrea Cardona headshot](/images/team/cardona_andrea.png)
 
 </Profile>
-<Profile name="Jan Child" title="Content design lead">
+<Profile name="Jan Child" title="Content Design Lead">
 
 ![Jan Child headshot](/images/team/child_jan.png)
 
 </Profile>
-<Profile name="Alessandra Davila" title="Front-end developer">
+<Profile name="Alessandra Davila" title="Front-end Developer">
 
 ![Alessandra Davila headshot](/images/team/davila_ale.png)
 
 </Profile>
-<Profile name="TJ Egan" title="Front-end developer">
+<Profile name="TJ Egan" title="Front-end Developer">
 
 ![TJ Egan headshot](/images/team/egan_tj.png)
 
 </Profile>
-<Profile name="Anna Gonzales" title="Senior visual designer">
+<Profile name="Anna Gonzales" title="Senior Visual Designer">
 
 ![Anna Gonzales headshot](/images/team/gonzales_anna.png)
 
 </Profile>
-<Profile name="Ricardo Henriquez" title="Front-end developer">
+<Profile name="Ricardo Henriquez" title="Front-end Developer">
 
 ![Ricardo Henriquez headshot](/images/team/henriquez_ricardo.png)
 
 </Profile>
-<Profile name="Jillian Howarth" title="UX designer">
+<Profile name="Jillian Howarth" title="UX Designer">
 
 ![Jillian Howarth headshot](/images/team/howarth_jillian.png)
 
 </Profile>
-<Profile name="Alison Joseph" title="Development manager">
+<Profile name="Alison Joseph" title="Development Manager">
 
 ![Alison Joseph headshot](/images/team/joseph_alison.png)
 
 </Profile>
-<Profile name="D.A. Kahn" title="Front-end developer, Accessibility advocate">
+<Profile name="D.A. Kahn" title="Front-end Developer, Accessibility Advocate">
 
 ![DA Kahn headshot](/images/team/kahn_da.png)
 
 </Profile>
-<Profile name="Josefina Mancilla"  title="Front-end developer">
+<Profile name="Josefina Mancilla"  title="Front-end Developer">
 
 ![Josefina Mancilla headshot](/images/team/mancilla_josefina.png)
 
 </Profile>
-<Profile name="Rafa Nogueras" title="Full-stack developer">
+<Profile name="Rafa Nogueras" title="Senior Software Developer">
 
 ![Rafa Nogueras headshot](/images/team/nogueras_rafa.png)
 
 </Profile>
-<Profile name="Vince Picone" title="Software developer">
+<Profile name="Vince Picone" title="Software Developer">
 
 ![Vince Picone headshot](/images/team/picone_vince.png)
 
 </Profile>
-<Profile name="Lauren Rice" title="Visual designer">
+<Profile name="Lauren Rice" title="Visual Designer">
 
 ![Lauren Rice headshot](/images/team/rice_lauren.png)
 
 </Profile>
-<Profile name="Matt Rosno" title="Offering manager">
+<Profile name="Matt Rosno" title="Offering Manager">
 
 ![Matt Rosno headshot](/images/team/rosno_matt.png)
 
 </Profile>
 <Profile name="Jeannie Servaas" title="IBM Design Principal">
 
-![eannie Servaas headshot](/images/team/servaas_jean.png)
+![Jeannie Servaas headshot](/images/team/servaas_jean.png)
 
 </Profile>
-<Profile name="Scott Strubberg" title="Front-end developer">
+<Profile name="Scott Strubberg" title="Front-end Developer">
 
 ![Scott Strubberg headshot](/images/team/strubberg_scott.png)
 
 </Profile>
-<Profile name="Andrew Wang" title="Software developer">
+<Profile name="Andrew Wang" title="Software Developer">
 
 ![Andrew Wang headshot](/images/team/wang_andrew.png)
 
