docs: BU name update

--- a/src/pages/all-about-carbon/leadership.mdx
+++ b/src/pages/all-about-carbon/leadership.mdx
@@ -110,7 +110,7 @@ units from the Carbon Design System.
 ![Mike Abbink headshot](/images/team/abbink_mike.png)
 
 </Profile>
-<Profile name="Arin Bhowmick" title="Vice President and Chief Design Officer, Cloud Data & AI">
+<Profile name="Arin Bhowmick" title="Vice President and Chief Design Officer, IBM Cloud and Cognitive Software">
 
 ![Arin Bhowmick headshot](/images/team/placeholder.png)
 
