Add dotcom components (#1827)
* quick add some images for dotcom comps

* Optimised images with calibre/image-actions

* missed an image

* image format fix to stop build break

* first batch of images for dotcom components

* Optimised images with calibre/image-actions

* Added all the new components on the dotcom site

* Optimised images with calibre/image-actions

* Fixed logo grid image

* Optimised images with calibre/image-actions

Co-authored-by: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>
Co-authored-by: Alessandra Davila <aledavila@ibm.com>
Co-authored-by: kodiakhq[bot] <49736102+kodiakhq[bot]@users.noreply.github.com>

--- a/src/pages/guidelines/2x-grid/overview.mdx
+++ b/src/pages/guidelines/2x-grid/overview.mdx
@@ -32,7 +32,7 @@ creative decision-making.
 <Row className="resource-card-group">
 <Column colMd={4} colLg={4} noGutterSm>
   <ResourceCard
-    subTitle="IBM Grid template"
+    subTitle="IBM Grid Template"
     href="https://sketch.cloud/s/ngV7z"
     >
       <MdxIcon name="sketch" />
