updated naming for cdai to cloud + cognitive

--- a/src/pages/community/domain-guidance.mdx
+++ b/src/pages/community/domain-guidance.mdx
@@ -41,7 +41,7 @@ _This content is accessible to IBMers only._
 <Row className="resource-card-group">
 <Column colLg={4} colMd={4} noGutterSm>
   <ResourceCard
-    subTitle="Cloud Data & AI"
+    subTitle="Carbon for Cloud & Cognitive"
     href="https://pages.github.ibm.com/cdai-design/pal/"
     >
 
