fix(website): fix FormGroup warnings, color table bugs

--- a/src/pages/components/form/usage.mdx
+++ b/src/pages/components/form/usage.mdx
@@ -62,7 +62,7 @@ do you gain by collecting this information?
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=form',
     }}>{`
   <Form>
-  <FormGroup>
+  <div style={{marginBottom: '2rem'}}>
     <TextInput
       helperText="Optional helper text here; if message is more than one line text should wrap (~100 character count maximum)"
       id="test2"
@@ -70,8 +70,8 @@ do you gain by collecting this information?
       labelText="Text input label"
       placeholder="Placeholder text"
     />
-  </FormGroup>
-  <FormGroup>
+  </div>
+  <div style={{marginBottom: '2rem'}}>
   <TextArea
     cols={50}
     helperText="Optional helper text here; if message is more than one line text should wrap (~100 character count maximum)"
@@ -81,8 +81,8 @@ do you gain by collecting this information?
     placeholder="Placeholder text"
     rows={4}
   />
-  </FormGroup>
-  <FormGroup>
+  </div>
+  <div style={{marginBottom: '2rem'}}>
     <Select
       defaultValue="placeholder-item"
       id="select-1"
@@ -102,7 +102,7 @@ do you gain by collecting this information?
         value="option-3"
       />
     </Select>
-  </FormGroup>
+  </div>
   <Button
     kind="primary"
     tabIndex={0}
