--- a/src/pages/components/text-input/code.mdx
+++ b/src/pages/components/text-input/code.mdx
@@ -79,7 +79,7 @@ usage documentation, see the Storybooks for each framework below.
         'http://vue.carbondesignsystem.com/?path=/story/components-cvtextinput--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=text-input',
     }}>{`
-    <FormGroup>
+    <div>
       <TextInput
         helperText="Optional helper text"
         id="test2"
@@ -87,7 +87,7 @@ usage documentation, see the Storybooks for each framework below.
         labelText="Text input label"
         placeholder="Placeholder text"
       />
-    </FormGroup>
+    </div>
   `}</ComponentVariant>
   <ComponentVariant
     id="password-input"
@@ -100,7 +100,7 @@ usage documentation, see the Storybooks for each framework below.
         'http://vue.carbondesignsystem.com/?path=/story/components-cvtextinput--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=text-input',
     }}>{`
-    <FormGroup>
+    <div>
     <TextInput.PasswordInput
       helperText="Optional helper text"
       hidePasswordLabel="Hide password"
@@ -110,7 +110,7 @@ usage documentation, see the Storybooks for each framework below.
       placeholder="Placeholder text"
       showPasswordLabel="Show password"
     />
-    </FormGroup>
+    </div>
   `}</ComponentVariant>
   <ComponentVariant
     id="text-area"
@@ -126,7 +126,7 @@ usage documentation, see the Storybooks for each framework below.
         'http://vue.carbondesignsystem.com/?path=/story/components-cvtextarea--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=text-input',
     }}>{`
-    <FormGroup>
+    <div>
     <TextArea
       cols={50}
       helperText="Optional helper text"
@@ -136,6 +136,6 @@ usage documentation, see the Storybooks for each framework below.
       placeholder="Placeholder text"
       rows={4}
     />
-    </FormGroup>
-  `}</ComponentVariant>
+    </div>
+`}</ComponentVariant>
 </ComponentDemo>
