--- a/src/pages/components/text-input/usage.mdx
+++ b/src/pages/components/text-input/usage.mdx
@@ -65,7 +65,7 @@ reflect the length of the content you expect the user to enter.
         'http://vue.carbondesignsystem.com/?path=/story/components-cvtextinput--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=text-input',
     }}>{`
-    <FormGroup>
+    <div>
       <TextInput
         helperText="Optional helper text"
         id="test2"
@@ -73,7 +73,7 @@ reflect the length of the content you expect the user to enter.
         labelText="Text input label"
         placeholder="Placeholder text"
       />
-    </FormGroup>
+    </div>
   `}</ComponentVariant>
   <ComponentVariant
     id="password-input"
@@ -86,7 +86,7 @@ reflect the length of the content you expect the user to enter.
         'http://vue.carbondesignsystem.com/?path=/story/components-cvtextinput--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=text-input',
     }}>{`
-    <FormGroup>
+    <div>
     <TextInput.PasswordInput
       helperText="Optional helper text"
       hidePasswordLabel="Hide password"
@@ -96,7 +96,7 @@ reflect the length of the content you expect the user to enter.
       placeholder="Placeholder text"
       showPasswordLabel="Show password"
     />
-    </FormGroup>
+    </div>
   `}</ComponentVariant>
   <ComponentVariant
     id="text-area"
@@ -112,7 +112,7 @@ reflect the length of the content you expect the user to enter.
         'http://vue.carbondesignsystem.com/?path=/story/components-cvtextarea--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=text-input',
     }}>{`
-    <FormGroup>
+    <div>
     <TextArea
       cols={50}
       helperText="Optional helper text"
@@ -122,7 +122,7 @@ reflect the length of the content you expect the user to enter.
       placeholder="Placeholder text"
       rows={4}
     />
-    </FormGroup>
+    </div>
   `}</ComponentVariant>
 </ComponentDemo>
 
