docs: projects tidy up

--- a/src/pages/all-about-carbon/projects.mdx
+++ b/src/pages/all-about-carbon/projects.mdx
@@ -9,16 +9,10 @@ description:
 <PageDescription>
 
 Projects are comprised of subject matter experts with a particular focus area.
-They can be formed from scratch, or might comprise an existing guild or group.
-They may be permanent initiatives, or formed for specific projects with a
-committed scope of work.
 
 </PageDescription>
 
-## Overview
-
-Projects are comprised of subject matter experts with a particular focus area.
-They can be formed from scratch, or might comprise an existing guild or group.
+Projects may be formed from scratch, or comprise an existing guild or group.
 They may be permanent initiatives, or formed for specific projects with a
 committed scope of work.
 
