docs: images plus minor copy tweaks

--- a/src/pages/all-about-carbon/leadership.mdx
+++ b/src/pages/all-about-carbon/leadership.mdx
@@ -47,7 +47,12 @@ practitioners to ensure Carbon stays true to the community we're serving.
 </Profile>
 <Profile name="Dawn Ahukanna" title="Design Principal and Front-end Architect, Watson IoT">
 
-![Dawn Ahukanna headshot](/images/team/placeholder.png)
+![Dawn Ahukanna headshot](/images/team/ahukanna_dawn.png)
+
+</Profile>
+<Profile name="Cameron Calder" title="To be confirmed">
+
+![Cameron Calder headshot](/images/team/calder_cameron.png)
 
 </Profile>
 <Profile name="Robin Cannon" title="Program Director">
@@ -55,9 +60,19 @@ practitioners to ensure Carbon stays true to the community we're serving.
 ![Robin Cannon headshot](/images/team/cannon_robin.png)
 
 </Profile>
+<Profile name="Trish Garrett" title="To be confirmed">
+
+![Trish Garrett headshot](/images/team/garrett_tricia.png)
+
+</Profile>
+<Profile name="Sophia Levens" title="To be confirmed">
+
+![Sophia Levens headshot](/images/team/levens_sophia.png)
+
+</Profile>
 <Profile name="David Levinson" title="IBM Design Principal, IBM Cloud and Cognitive Software">
 
-![David Levinson headshot](/images/team/placeholder.png)
+![David Levinson headshot](/images/team/levinson_david.png)
 
 </Profile>
 <Profile name="Alison Joseph" title="Development Manager, Carbon">
@@ -70,9 +85,14 @@ practitioners to ensure Carbon stays true to the community we're serving.
 ![Jeannie Servaas headshot](/images/team/servaas_jean.png)
 
 </Profile>
-<Profile name="Tessa Rodes" title="Senior Design Manager, IBM Cloud Platform">
+<Profile name="Wonil Suh" title="To be confirmed">
 
-![Tessa Rodes headshot](/images/team/placeholder.png)
+![Wonil Suh headshot](/images/team/suh_wonil.png)
+
+</Profile>
+<Profile name="Tessa Rodes" title="Senior Design Manager, IBM Cloud">
+
+![Tessa Rodes headshot](/images/team/rodes_tessa.png)
 
 </Profile>
 </Row>
@@ -112,17 +132,42 @@ units from the Carbon Design System.
 </Profile>
 <Profile name="Arin Bhowmick" title="Vice President and Chief Design Officer, IBM Cloud and Cognitive Software">
 
-![Arin Bhowmick headshot](/images/team/placeholder.png)
+![Arin Bhowmick headshot](/images/team/bhowmick_arin.png)
+
+</Profile>
+<Profile name="Sarah Brooks" title="To be confirmed">
+
+![Sarah Brooks headshot](/images/team/brooks_sarah.png)
 
 </Profile>
 <Profile name="Haidy Francis" title="Design Executive, IBM Security">
 
-![Haidy Francis headshot](/images/team/placeholder.png)
+![Haidy Francis headshot](/images/team/francis_haidy.png)
+
+</Profile>
+<Profile name="Phil Gilbert" title="General Manager, Design Program Office">
+
+![Phil Gilbert headshot](/images/team/gilbert_phil.png)
 
 </Profile>
 <Profile name="Craig Moser" title="Vice President of Design and Usability, AI Applications">
 
-![Craig Moser headshot](/images/team/placeholder.png)
+![Craig Moser headshot](/images/team/moser_craig.png)
+
+</Profile>
+<Profile name="Doug Powell" title="To be confirmed">
+
+![Doug Powell headshot](/images/team/powell_doug.png)
+
+</Profile>
+<Profile name="Nigel Prentice" title="To be confirmed">
+
+![Nigel Prentice headshot](/images/team/prentice_nigel.png)
+
+</Profile>
+<Profile name="Shani Sandy" title="To be confirmed">
+
+![Shani Sandy headshot](/images/team/sandy_shani.png)
 
 </Profile>
 
