--- a/src/pages/all-about-carbon/projects.mdx
+++ b/src/pages/all-about-carbon/projects.mdx
@@ -1,17 +1,20 @@
 ---
 title: Projects
 description:
-  Projects have a particular focus area and are comprised of subject matter
+  Projects are scoped work initiatives formed by groups of subject matter
   experts. They may be permanent initiatives, or formed for specific projects
   with a committed scope of work.
 ---
 
 <PageDescription>
 
-Projects are comprised of subject matter experts with a particular focus area.
+Projects are scoped work initiatives formed by groups of subject matter experts.
 
 </PageDescription>
 
+## What is a project?
+
+Projects are scoped work initiatives formed by groups of subject matter experts.
 Projects may be formed from scratch, or comprise an existing guild or group.
 They may be permanent initiatives, or formed for specific projects with a
 committed scope of work.
