--- a/src/pages/all-about-carbon/the-team.mdx
+++ b/src/pages/all-about-carbon/the-team.mdx
@@ -17,12 +17,10 @@ available for anyone to use and everyone is encouraged to contribute.
 ## The core team
 
 Carbon is maintained by a dedicated team of designers, developers, and writers
-primarily based in the Austin, Texas IBM Design Studio. Right now though, we’re
-all staying safe and working from home.
-
-The team is committed to making our fellow designers and developers productive
-and successful in designing digital experiences and products. If you need help
-or have questions, feel free to reach out to anyone on the team.
+working closely to support teams across the business to be productive and
+successful in designing digital experiences and products. The team is primarily
+based in the Austin, Texas IBM Design Studio. Right now though, everyone is
+staying safe and working from home.
 
 <Row>
 
