--- a/src/pages/developing/frameworks/react.mdx
+++ b/src/pages/developing/frameworks/react.mdx
@@ -8,7 +8,7 @@ tabs: ['React', 'Vanilla', 'Angular', 'Vue', 'Other frameworks']
 
 <PageDescription>
 
-The library provides front-end developers & engineers a collection of reusable
+The Carbon React library provides front-end developers & engineers a collection of reusable
 React components to build websites and user interfaces. Adopting the library
 enables developers to use consistent markup, styles, and behavior in prototype
 and production work.
