Fixed broken link on Patterns > Filtering page

--- a/src/pages/patterns/filtering/index.mdx
+++ b/src/pages/patterns/filtering/index.mdx
@@ -207,7 +207,7 @@ also be a way to dismiss all filters across all categories at once.
 
 - [Clear](/patterns/common-actions#clear)
 - [Notifications](/patterns/notification-pattern)
-- [Search](patterns/search-pattern)
+- [Search](/patterns/search-pattern)
 
 </Column>
 </Row>
