docs: team updates

--- a/src/pages/all-about-carbon/leadership.mdx
+++ b/src/pages/all-about-carbon/leadership.mdx
@@ -40,7 +40,7 @@ practitioners to ensure Carbon stays true to the community we're serving.
 
 <Row>
 
-<Profile name="Mike Abbink" title="IBM Distingished Designer">
+<Profile name="Mike Abbink" title="IBM Distinguished Designer, Carbon">
 
 ![Mike Abbink headshot](/images/team/abbink_mike.png)
 
@@ -50,12 +50,12 @@ practitioners to ensure Carbon stays true to the community we're serving.
 ![Dawn Ahukanna headshot](/images/team/ahukanna_dawn.png)
 
 </Profile>
-<Profile name="Cameron Calder" title="To be confirmed">
+<Profile name="Cameron Calder" title="IBM Design Principal, IBM Cloud and Cognitive Software">
 
 ![Cameron Calder headshot](/images/team/calder_cameron.png)
 
 </Profile>
-<Profile name="Robin Cannon" title="Program Director">
+<Profile name="Robin Cannon" title="Program Director, Carbon">
 
 ![Robin Cannon headshot](/images/team/cannon_robin.png)
 
@@ -125,7 +125,7 @@ units from the Carbon Design System.
 
 <Row>
 
-<Profile name="Mike Abbink" title="IBM Distingished Designer">
+<Profile name="Mike Abbink" title="IBM Distinguished Designer, Carbon">
 
 ![Mike Abbink headshot](/images/team/abbink_mike.png)
 
@@ -165,7 +165,7 @@ units from the Carbon Design System.
 ![Nigel Prentice headshot](/images/team/prentice_nigel.png)
 
 </Profile>
-<Profile name="Shani Sandy" title="To be confirmed">
+<Profile name="Shani Sandy" title="Executive Design Practice Leader, Director IBM Z">
 
 ![Shani Sandy headshot](/images/team/sandy_shani.png)
 
