--- a/src/pages/all-about-carbon/the-team.mdx
+++ b/src/pages/all-about-carbon/the-team.mdx
@@ -24,7 +24,7 @@ staying safe and working from home.
 
 <Row>
 
-<Profile name="Mike Abbink" title="IBM Distingished Designer">
+<Profile name="Mike Abbink" title="IBM Distinguished Designer">
 
 ![Mike Abbink headshot](/images/team/abbink_mike.png)
 
